--- a/bearly.ipynb
+++ b/bearly.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e8bcbd70-edf1-4ba0-a607-2db8c7843cb6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fastai.vision.all import *\n",
+    "from fastai.vision.widgets import *\n",
+    "\n",
+    "path = Path()\n",
+    "learn_inf = load_learner(path/'model.pkl')"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "491aa9ec377dfa98b111cc10c6852de80ddc3aa90fa413d6850f534aecb6824b"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.10 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
